# smart-greed

./: .gitignore  README.md  pyproject.toml  run.bat
.github/workflows/: pythonapp.yml
smart_greed/: __main__.py  base_cfg.py  config.toml
smart_greed/data_formats/: __init__.py
smart_greed/data_formats/moex/: main.py
smart_greed/interfaces/: __init__.py  abs_config.py  abs_format.py  abs_presenter.py  abs_scanner.py  base.py
smart_greed/presenters/: __init__.py
smart_greed/presenters/moex_to_console/: __init__.py  cfg.py  main.py
smart_greed/scanners/: __init__.py
smart_greed/scanners/moex_using_requests/: __init__.py  main.py
tests/: conftest.py  helpers.py  test_basic.py
