[tool.poetry]
name = "smart-greed"
version = "0.1.0"
description = ""
authors = ["Igor Zyktin <nicord@yandex.ru>"]
readme = "README.md"
packages = [{include = "smart_greed"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
